--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
+title:              DataSlice
+email:              lmatojane@gmail.com
+description:        Data Science and Machine learning Projects
 author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+baseurl:            ""
+url:                "https://lesego94.github.io"
 
 # Social Profiles
 twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+github_username:    
+facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username: https://www.linkedin.com/in/lesego-matojane-5b9ab9a4/
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
