--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              DataSlice
+title:              DataWrangler
 email:              lmatojane@gmail.com
 description:        Data Science and Machine learning Projects
-author:             Start Bootstrap
+author:             Lesego Matojane
 baseurl:            ""
 url:                "https://lesego94.github.io"
 
