--- a/_posts/.obsidian/workspace
+++ b/_posts/.obsidian/workspace
@@ -92,11 +92,12 @@
     "2022-06-02-KNN-Mode_seeking.md",
     "2022-06-01-Probabilistic_Matching.md",
     "2021-01-03-web-scraping.md",
-    "2022-04-16-Genetic_Algo.md",
     "2022-05-10-Housing_Market.md",
+    "2022-04-16-Genetic_Algo.md",
+    "explicit_my3.gif",
+    "references.bib.md",
     "img/posts/output.gif.md",
     "img/posts/explicit_my3.gif.md",
-    "explicit_my3.gif",
     "Pasted image 20220602205419.png.md"
   ]
 }
