--- a/_posts/.obsidian/workspace
+++ b/_posts/.obsidian/workspace
@@ -4,7 +4,7 @@
     "type": "split",
     "children": [
       {
-        "id": "f4fd72c098560c57",
+        "id": "28dd52218b502370",
         "type": "leaf",
         "state": {
           "type": "markdown",
@@ -87,17 +87,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "f4fd72c098560c57",
+  "active": "28dd52218b502370",
   "lastOpenFiles": [
     "2022-06-02-KNN-Mode_seeking.md",
-    "2022-06-01-Probabilistic_Matching.md",
-    "2021-01-03-web-scraping.md",
+    "Pasted image 20220714121035.png",
+    "img/posts/cluster.jpeg.md",
     "2022-05-10-Housing_Market.md",
     "2022-04-16-Genetic_Algo.md",
+    "2022-06-01-Probabilistic_Matching.md",
+    "2021-01-03-web-scraping.md",
     "explicit_my3.gif",
     "references.bib.md",
-    "img/posts/output.gif.md",
-    "img/posts/explicit_my3.gif.md",
-    "Pasted image 20220602205419.png.md"
+    "img/posts/output.gif.md"
   ]
 }
